fix pagination for list-all-job of recruiter
Signed-off-by: vopn010202 <namvo.010202@gmail.com>